# Common-widget

./: .gitignore  CMakeLists.txt  README.md  standard_lable.pro  需求规格说明.txt
docs/: 需求规格说明.md
docs/superpowers/plans/: 2026-07-20-standard-lable.md  2026-07-21-op-state-plan.md  2026-07-23-control-bridge-and-font-tokens-plan.md
docs/superpowers/specs/: 2026-07-20-standard-lable-design.md  2026-07-21-op-state-design.md  2026-07-23-control-bridge-and-font-tokens-design.md  2026-07-23-native-widget-global-qss-design.md
examples/: CMakeLists.txt  Gallery.cpp  Gallery.h  SSwatch.h  StatusLight.h  examples.pro  main.cpp
examples/resources/: icons.qrc
examples/widgets/: SButton.h  SCheckBox.h  SComboBox.h  SDialog.h  SGroupBox.h  SLabel.h  SLineEdit.h  SListView.h  SProgressBar.h  SRadioButton.h  SSlider.h  SSpinBox.h  STabWidget.h  STableView.h  STreeView.h
include/slabel/: BindingEngine.h  ISControl.h  LanguageManager.h  OperationState.h  SBindable.h  SButton.h  SCheckBox.h  SComboBox.h  SControl.h  SControlBridge.h  SControlCore.h  SControlEngine.h  SDialog.h  SGlobal.h  SGroupBox.h  SLabel.h  SLineEdit.h  SListView.h  SProgressBar.h  SRadioButton.h  SSlider.h  SSpinBox.h  STabWidget.h  STableView.h  STreeView.h  ThemeManager.h
src/: BindingEngine.cpp  LanguageManager.cpp  SBindable.cpp  SControlBridge.cpp  SControlCore.cpp  SControlEngine.cpp  ThemeManager.cpp  slabel_version.cpp
tests/: CMakeLists.txt  test_binding.cpp  test_binding.pro  test_control_bridge.cpp  test_control_bridge.pro  test_control_engine.cpp  test_control_engine.pro  test_controlcore.cpp  test_controlcore.pro  test_controls.cpp  test_controls.pro  test_font_tokens.cpp  test_font_tokens.pro  test_language.cpp  test_language.pro  test_opstate.cpp  test_opstate.pro  test_scontrol_theme.cpp  test_scontrol_theme.pro  test_theme_files.cpp  test_theme_files.pro  test_thememanager.cpp  test_thememanager.pro  test_version.cpp  test_version.pro  tests.pro
themes/: dark.qss  default.qss  light.qss
translations/: slabel_en.ts  slabel_zh_CN.ts
